src_test/smartcontract_vm/method_invoke/resources/methods/compile_error/main.alns


package test.fw;

import test.fw.base.BaseClass;

class SmartContract {
	public SmartContract() {
		2();
	}
	
	public int main(){
		
	}

}
